<resources>
    <string name="app_name">Mind Melter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_hint">Type your message here...</string>
    <string name="input_submit">Submit</string>
    <string name="btn_goto_chat">Learn More</string>
    <string name="input_speak">Speak Message</string>
    <string name="email_hint">Email</string>
    <string name="verify_account_title">Verify Account</string>
    <string name="verify">Verify</string>
    <string name="verification_number">Verification Number</string>
    <string name="settings_button_description">Settings</string>
    <string name="mainActivityImageView">main image</string>
    <string name="learn_more">Learn More</string>
    <string name="on_this_day_text">On This Day</string>
    <string name="home_page_trivia">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. \n\nNemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</string>
    <string name="chats">Chats</string>
    <string name="button">Button</string>
    <string name="retry">Retry</string>
    <string name="blank_chat_name">Blank Chat Name</string>
    <string name="already_have_an_account"><u>Already have an account? Log in!</u></string>
    <string name="dont_have_an_account"><u>Don\'t have an account? Sign Up!</u></string>
    <string name="mind_melter_categories">Mind Melter Trivia!</string>
    <string name="profile_page">Profile Page</string>
    <string name="arts_and_literature">Arts\n&amp; Literature</string>
    <string name="science_and_nature">Science\n&amp; Nature</string>
    <string name="sports_and_leisure">Sports\n&amp; Leisure</string>
    <string name="history">History</string>
    <string name="geography">Geography</string>
    <string name="entertainment">Entertainment</string>
    <string name="did_you_know">Did You Know?</string>
    <!-- Settings Page strings -->
    <string name="settings_title">Settings</string>
    <string name="light_dark_mode">Light/Dark Mode</string>
    <string name="speech_to_text">Speech to Text</string>
    <string name="mode_switch_label">Toggle Mode</string>
    <string name="tts_switch_label">Toggle TTS</string>
    <string name="mind_melter_home">Mind Melter to Trivia\n</string>
</resources>