<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_trivia_frame_layout"
    style="@style/SCREEN"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_color">

    <LinearLayout
        android:id="@+id/activity_trivia_layout_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_color"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/activity_trivia_title"
            style="@style/TEXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/did_you_know"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/activity_trivia_text_view"
            style="@style/TEXT"
            android:layout_width="280dp"
            android:layout_height="268dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_with_glow_background"
            android:gravity="center"
            android:text="@string/home_page_trivia"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <Button
            android:id="@+id/activity_trivia_learn_more_button"
            style="@style/BUTTON"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_with_glow_background"
            android:enabled="false"
            android:text="@string/learn_more" />

        <Button
            android:id="@+id/activity_trivia_retry_button"
            style="@style/BUTTON"
            android:layout_width="225dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:background="@color/pink_color"
            android:text="@string/retry"
            android:visibility="gone"
            tools:visibility="visible" />


    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/triviaActivityProfilePageImageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="top|end"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/myprofile"
        app:civ_border_color="@color/pink_color"
        app:civ_border_width="4dp" />


    <ProgressBar
        android:id="@+id/activity_trivia_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible" />

</FrameLayout>
