<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chat_activity_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_color"
    tools:context=".activities.ChatActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/recycler_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/dark_color"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@color/dark_color">

        <ProgressBar
            android:id="@+id/initial_loading_indicator"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/dark_color"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chat_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/dark_color"
            android:paddingTop="8dp"
            android:scrollbars="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/retry_layout"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/retry_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_color"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="16dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/loading_indicator"
            tools:visibility="visible">

            <Button
                android:id="@+id/retry_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retry" />

            <TextView
                android:id="@+id/error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/design_default_color_error"
                tools:text="An error occurred" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/loading_indicator"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@color/dark_color"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/message_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="no"
            android:hint="@string/input_hint"
            android:imeOptions="actionSend"
            android:inputType="textCapSentences|textImeMultiLine"
            android:minHeight="48dp" />

        <ImageButton
            android:id="@+id/speak_message_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/input_submit"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:srcCompat="@android:drawable/ic_btn_speak_now" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
